pom.xml: remove maven-surefire-plugin configuration from root pom.xml
This is provided/overridden by the submodules and not needed here.